Add manual send button

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -45,6 +45,10 @@
                         </select>
                     </div>
                 </div>
+                {mode == 'manual' ?
+                    (<button type="button" class="btn btn-primary">发射</button>
+                    ) : null
+                }
             </div>
         )
     }
