Feat change mode

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -24,9 +24,23 @@
         const onModeChange = (e) => {
             console.log(`change mode to ${e.target.value}`)
             setMode(e.target.value)
+            let request = new XMLHttpRequest();
+            request.onreadystatechange = function () { // 状态发生变化时，函数被回调
+                if (request.readyState === 4) { // 成功完成
+                    // 判断响应结果:
+                    if (request.status === 200) {
+                        // 成功，通过responseText拿到响应的文本:
+                        console.log('send successfully')
+                    } else {
+                        console.log('send failed')
+                    }
+                }
+            }
+            request.open('POST', '/mode/' + mode)
+            request.send()
         }
 
-        const sendShootMessage = (e) => {
+        const requestShoot = (e) => {
             console.log('click button')
             let request = new XMLHttpRequest();
             request.onreadystatechange = function () { // 状态发生变化时，函数被回调
@@ -64,7 +78,7 @@
                     </div>
                 </div>
                 {mode === 'manual' ?
-                    (<button type="button" className="btn btn-primary" onClick={sendShootMessage}>发射</button>
+                    (<button type="button" className="btn btn-primary" onClick={requestShoot}>发射</button>
                     ) : null
                 }
             </div>
