Refactor extract components

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -17,9 +17,10 @@
 
 <div id="app"></div>
 
+<script src="../static/utils/request.js"></script>
+<script type="text/babel" src="../static/components/ModeSelector.jsx"></script>
+<script type="text/babel" src="../static/components/ManualController.jsx"></script>
 <script type="text/babel" src="../static/App.jsx"></script>
-<script type="text/babel">
-    ReactDOM.render(<App/>, document.querySelector('#app'));
-</script>
+<script type="text/babel" src="../static/main.js"></script>
 </body>
 </html>
